--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12.3"
 dependencies = [
+    "dashscope>=1.25.9",
     "openai>=2.15.0",
     "pyyaml>=6.0.3",
+    "requests>=2.32.5",
     "tqdm>=4.67.1",
 ]
